Fix help button alignment

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -399,7 +399,7 @@ h6 {
   border: 1px solid #DAA520;
   transition: transform 0.3s ease-in-out;
 
-  z-index: 99;
+  z-index: 1100;
 }
 
 .faq-button:hover {
@@ -442,10 +442,4 @@ h6 {
   box-shadow: 0px 1px 5px 1px #c65b5b;
 }
 /* -------------------------------- END HELP PAGE (FAQ) */
-.faq-body {
-  border: 2px solid #A02C2C;
-  border-radius: .5rem;
-  box-shadow: 0px 1px 5px 1px #c65b5b;
-}
 
-/* -------------------------------- END HELP PAGE (FAQ) */
